--- a/deployments/championships/templates/service.yaml
+++ b/deployments/championships/templates/service.yaml
@@ -5,6 +5,10 @@ metadata:
   annotations:
     konghq.com/plugins: prometheus-championships,championships-logs
     ingress.kubernetes.io/service-upstream: "true"
+    konghq.com/connect-timeout: "2000"
+    konghq.com/read-timeout: "2000"
+    konghq.com/write-timeout: "2000"
+    konghq.com/host-header: "championships.bets.svc"
   labels:
     {{- include "championships.labels" . | nindent 4 }}
 spec:
